syntax = "proto3";

import "google/protobuf/timestamp.proto";

service Room {
  rpc Create (CreateRequest) returns (CreateResponse);
}

message CreateRequest {
  string room_name = 1;
}

message CreateResponse {
  int32 room_id = 1;
}